assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 116 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 formal: OBJECTID ':' TYPEID

    3 formal_list: %empty
    4            | ',' formal formal_list

    5 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
    6        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expression '}'
    7        | attr_feature

    8 attr_feature: OBJECTID ':' TYPEID
    9             | OBJECTID ':' TYPEID ASSIGN expression

   10 feature_list: %empty
   11             | feature ';' feature_list

   12 attr_feature_list: %empty
   13                  | ',' attr_feature attr_feature_list

   14 class: CLASS TYPEID '{' feature_list '}'
   15      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

   16 class_list: class
   17           | class_list class

   18 expression_list: expression ';'
   19                | expression ';' expression_list

   20 comma_expression_list: %empty
   21                      | ',' expression comma_expression_list

   22 branch: OBJECTID ':' TYPEID DARROW expression ';'

   23 branch_list: branch
   24            | branch branch_list

   25 expression: OBJECTID ASSIGN expression
   26           | expression '.' OBJECTID '(' ')'
   27           | expression '.' OBJECTID '(' expression comma_expression_list ')'
   28           | OBJECTID '(' ')'
   29           | OBJECTID '(' expression comma_expression_list ')'
   30           | expression '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   32           | IF expression THEN expression ELSE expression FI
   33           | WHILE expression LOOP expression POOL
   34           | '{' expression_list '}'
   35           | LET attr_feature attr_feature_list IN expression
   36           | CASE expression OF branch_list ESAC
   37           | NEW TYPEID
   38           | ISVOID expression
   39           | expression '+' expression
   40           | expression '-' expression
   41           | expression '*' expression
   42           | expression '/' expression
   43           | '~' expression
   44           | expression '<' expression
   45           | expression LE expression
   46           | expression '=' expression
   47           | NOT expression
   48           | '(' expression ')'
   49           | OBJECTID
   50           | INT_CONST
   51           | STR_CONST
   52           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 26 27 28 29 30 31 48
')' (41) 5 6 26 27 28 29 30 31 48
'*' (42) 41
'+' (43) 39
',' (44) 4 13 21
'-' (45) 40
'.' (46) 26 27 30 31
'/' (47) 42
':' (58) 2 5 6 8 9 22
';' (59) 11 15 18 19 22
'<' (60) 44
'=' (61) 46
'@' (64) 30 31
'{' (123) 5 6 14 15 34
'}' (125) 5 6 14 15 34
'~' (126) 43
error (256)
CLASS (258) 14 15
ELSE (259) 32
FI (260) 32
IF (261) 32
IN (262) 35
INHERITS (263) 15
LET (264) 35
LOOP (265) 33
POOL (266) 33
THEN (267) 32
WHILE (268) 33
CASE (269) 36
ESAC (270) 36
OF (271) 36
DARROW (272) 22
NEW (273) 37
ISVOID (274) 38
STR_CONST (275) 51
INT_CONST (276) 50
BOOL_CONST (277) 52
TYPEID (278) 2 5 6 8 9 14 15 22 30 31 37
OBJECTID (279) 2 5 6 8 9 22 25 26 27 28 29 30 31 49
ASSIGN (280) 9 25
NOT (281) 47
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
formal (47)
    on left: 2, on right: 4 6
formal_list (48)
    on left: 3 4, on right: 4 6
feature (49)
    on left: 5 6 7, on right: 11
attr_feature (50)
    on left: 8 9, on right: 7 13 35
feature_list (51)
    on left: 10 11, on right: 11 14 15
attr_feature_list (52)
    on left: 12 13, on right: 13 35
class (53)
    on left: 14 15, on right: 16 17
class_list (54)
    on left: 16 17, on right: 1 17
expression_list (55)
    on left: 18 19, on right: 19 34
comma_expression_list (56)
    on left: 20 21, on right: 21 27 29 31
branch (57)
    on left: 22, on right: 23 24
branch_list (58)
    on left: 23 24, on right: 24 36
expression (59)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52, on right: 5 6 9 18 19 21 22 25 26
    27 29 30 31 32 33 35 36 38 39 40 41 42 43 44 45 46 47 48


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class       go to state 3
    class_list  go to state 4


State 1

   14 class: CLASS . TYPEID '{' feature_list '}'
   15      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

   16 class_list: class .

    $default  reduce using rule 16 (class_list)


State 4

    1 program: class_list .
   17 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 5

   14 class: CLASS TYPEID . '{' feature_list '}'
   15      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

   17 class_list: class_list class .

    $default  reduce using rule 17 (class_list)


State 8

   15 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

   14 class: CLASS TYPEID '{' . feature_list '}'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 10 (feature_list)

    feature       go to state 12
    attr_feature  go to state 13
    feature_list  go to state 14


State 10

   15 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

    5 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
    6        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expression '}'
    8 attr_feature: OBJECTID . ':' TYPEID
    9             | OBJECTID . ':' TYPEID ASSIGN expression

    ':'  shift, and go to state 16
    '('  shift, and go to state 17


State 12

   11 feature_list: feature . ';' feature_list

    ';'  shift, and go to state 18


State 13

    7 feature: attr_feature .

    $default  reduce using rule 7 (feature)


State 14

   14 class: CLASS TYPEID '{' feature_list . '}'

    '}'  shift, and go to state 19


State 15

   15 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 10 (feature_list)

    feature       go to state 12
    attr_feature  go to state 13
    feature_list  go to state 20


State 16

    8 attr_feature: OBJECTID ':' . TYPEID
    9             | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 21


State 17

    5 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
    6        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 22
    ')'       shift, and go to state 23

    formal  go to state 24


State 18

   11 feature_list: feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 10 (feature_list)

    feature       go to state 12
    attr_feature  go to state 13
    feature_list  go to state 25


State 19

   14 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 14 (class)


State 20

   15 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 26


State 21

    8 attr_feature: OBJECTID ':' TYPEID .
    9             | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 27

    $default  reduce using rule 8 (attr_feature)


State 22

    2 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


State 23

    5 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 29


State 24

    6 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expression '}'

    ','  shift, and go to state 30

    $default  reduce using rule 3 (formal_list)

    formal_list  go to state 31


State 25

   11 feature_list: feature ';' feature_list .

    $default  reduce using rule 11 (feature_list)


State 26

   15 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 32


State 27

    9 attr_feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 47


State 28

    2 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 48


State 29

    5 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 49


State 30

    4 formal_list: ',' . formal formal_list

    OBJECTID  shift, and go to state 22

    formal  go to state 50


State 31

    6 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 51


State 32

   15 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 15 (class)


State 33

   32 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 52


State 34

   35 expression: LET . attr_feature attr_feature_list IN expression

    OBJECTID  shift, and go to state 53

    attr_feature  go to state 54


State 35

   33 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 55


State 36

   36 expression: CASE . expression OF branch_list ESAC

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 56


State 37

   37 expression: NEW . TYPEID

    TYPEID  shift, and go to state 57


State 38

   38 expression: ISVOID . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 58


State 39

   51 expression: STR_CONST .

    $default  reduce using rule 51 (expression)


State 40

   50 expression: INT_CONST .

    $default  reduce using rule 50 (expression)


State 41

   52 expression: BOOL_CONST .

    $default  reduce using rule 52 (expression)


State 42

   25 expression: OBJECTID . ASSIGN expression
   28           | OBJECTID . '(' ')'
   29           | OBJECTID . '(' expression comma_expression_list ')'
   49           | OBJECTID .

    ASSIGN  shift, and go to state 59
    '('     shift, and go to state 60

    $default  reduce using rule 49 (expression)


State 43

   47 expression: NOT . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 61


State 44

   43 expression: '~' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 62


State 45

   48 expression: '(' . expression ')'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 63


State 46

   34 expression: '{' . expression_list '}'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression_list  go to state 64
    expression       go to state 65


State 47

    9 attr_feature: OBJECTID ':' TYPEID ASSIGN expression .
   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 9 (attr_feature)


State 48

    2 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 2 (formal)


State 49

    5 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 75


State 50

    4 formal_list: ',' formal . formal_list

    ','  shift, and go to state 30

    $default  reduce using rule 3 (formal_list)

    formal_list  go to state 76


State 51

    6 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 77


State 52

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   32           | IF expression . THEN expression ELSE expression FI
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    THEN  shift, and go to state 78
    LE    shift, and go to state 66
    '<'   shift, and go to state 67
    '='   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '@'   shift, and go to state 73
    '.'   shift, and go to state 74


State 53

    8 attr_feature: OBJECTID . ':' TYPEID
    9             | OBJECTID . ':' TYPEID ASSIGN expression

    ':'  shift, and go to state 16


State 54

   35 expression: LET attr_feature . attr_feature_list IN expression

    ','  shift, and go to state 79

    $default  reduce using rule 12 (attr_feature_list)

    attr_feature_list  go to state 80


State 55

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   33           | WHILE expression . LOOP expression POOL
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LOOP  shift, and go to state 81
    LE    shift, and go to state 66
    '<'   shift, and go to state 67
    '='   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '@'   shift, and go to state 73
    '.'   shift, and go to state 74


State 56

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   36           | CASE expression . OF branch_list ESAC
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    OF   shift, and go to state 82
    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74


State 57

   37 expression: NEW TYPEID .

    $default  reduce using rule 37 (expression)


State 58

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   38           | ISVOID expression .
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 38 (expression)


State 59

   25 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 83


State 60

   28 expression: OBJECTID '(' . ')'
   29           | OBJECTID '(' . expression comma_expression_list ')'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    ')'         shift, and go to state 84
    '{'         shift, and go to state 46

    expression  go to state 85


State 61

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression
   47           | NOT expression .

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 47 (expression)


State 62

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   43           | '~' expression .
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 43 (expression)


State 63

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression
   48           | '(' expression . ')'

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    ')'  shift, and go to state 86


State 64

   34 expression: '{' expression_list . '}'

    '}'  shift, and go to state 87


State 65

   18 expression_list: expression . ';'
   19                | expression . ';' expression_list
   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74
    ';'  shift, and go to state 88


State 66

   45 expression: expression LE . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 89


State 67

   44 expression: expression '<' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 90


State 68

   46 expression: expression '=' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 91


State 69

   39 expression: expression '+' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 92


State 70

   40 expression: expression '-' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 93


State 71

   41 expression: expression '*' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 94


State 72

   42 expression: expression '/' . expression

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 95


State 73

   30 expression: expression '@' . TYPEID '.' OBJECTID '(' ')'
   31           | expression '@' . TYPEID '.' OBJECTID '(' expression comma_expression_list ')'

    TYPEID  shift, and go to state 96


State 74

   26 expression: expression '.' . OBJECTID '(' ')'
   27           | expression '.' . OBJECTID '(' expression comma_expression_list ')'

    OBJECTID  shift, and go to state 97


State 75

    5 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 98


State 76

    4 formal_list: ',' formal formal_list .

    $default  reduce using rule 4 (formal_list)


State 77

    6 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 99


State 78

   32 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 100


State 79

   13 attr_feature_list: ',' . attr_feature attr_feature_list

    OBJECTID  shift, and go to state 53

    attr_feature  go to state 101


State 80

   35 expression: LET attr_feature attr_feature_list . IN expression

    IN  shift, and go to state 102


State 81

   33 expression: WHILE expression LOOP . expression POOL

    IF          shift, and go to state 33
    LET         shift, and go to state 34
    WHILE       shift, and go to state 35
    CASE        shift, and go to state 36
    NEW         shift, and go to state 37
    ISVOID      shift, and go to state 38
    STR_CONST   shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    OBJECTID    shift, and go to state 42
    NOT         shift, and go to state 43
    '~'         shift, and go to state 44
    '('         shift, and go to state 45
    '{'         shift, and go to state 46

    expression  go to state 103


State 82

   36 expression: CASE expression OF . branch_list ESAC

    OBJECTID  shift, and go to state 104

    branch       go to state 105
    branch_list  go to state 106


State 83

   25 expression: OBJECTID ASSIGN expression .
   26           | expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression

    LE   shift, and go to state 66
    '<'  shift, and go to state 67
    '='  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    '@'  shift, and go to state 73
    '.'  shift, and go to state 74

    $default  reduce using rule 25 (expression)


State 84

   28 expression: OBJECTID '(' ')' .

    $default  reduce using rule 28 (expression)


State 85

   26 expression: expression . '.' OBJECTID '(' ')'
   27           | expression . '.' OBJECTID '(' expression comma_expression_list ')'
   29           | OBJECTID '(' expression . comma_expression_list ')'
   30           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   31           | expression . '@' TYPEID '.' OBJECTID '(' expression comma_expression_list ')'
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression
